color count stream